<?xml version="1.0"?>
<package format="2">
  <name>mobile_manipulation_rl</name>
  <version>0.0.0</version>
  <description>The Kinematic Feasibility RL package</description>

  <maintainer email="honerkamp@cs.uni-freiburg.de">Daniel Honerkamp</maintainer>
  <license>Apache2.0</license>
  <url type="website">http://kinematic-rl.cs.uni-freiburg.de/</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_depend>pybind11_catkin</build_depend>
<!--  <build_depend>hsrb_analytic_ik</build_depend>-->
<!--  <build_depend>hsrb_description</build_depend>-->
<!--  <build_depend>tmc_robot_kinematics_model</build_depend>-->
<!--  <exec_depend>hsrb_analytic_ik</exec_depend>-->
<!--  <exec_depend>hsrb_description</exec_depend>-->
<!--  <exec_depend>tmc_robot_kinematics_model</exec_depend>-->

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>pybind11_catkin</exec_depend>
  <exec_depend>cmake_modules</exec_depend>
  <export>
  </export>
</package>
