<?xml version="1.0"?>
<package format="2">
  <name>control</name>
  
  <version>1.1.1</version>
  
  <description>OpenDR's ROS nodes for control package</description>
  
  <maintainer email="tefas@csd.auth.gr">OpenDR Project Coordinator</maintainer>
  
  <license>Apache License v2.0 </license>
  
  <url type="website">opendr.eu</url>

  <buildtool_depend>catkin</buildtool_depend>


  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>actionlib</build_depend>
  
  <exec_depend>rospy</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>actionlib</exec_depend>

  <export>


  </export>
</package>
