<?xml version="1.0"?>
<package format="2">
  <name>opendr_data_generation</name>
  <version>2.1.0</version>
  <description>OpenDR's ROS nodes for data generation package</description>
  <maintainer email="tefas@csd.auth.gr">OpenDR Project Coordinator</maintainer>
  <license>Apache License v2.0 </license>
  <url type="website">opendr.eu</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <export>
  </export>
</package>

