<?xml version="1.0"?>
<package format="2">
  <name>opendr_planning</name>
  <version>2.1.0</version>
  <description>OpenDR's ROS planning package</description>
  <maintainer email="tefas@csd.auth.gr">OpenDR Project Coordinator</maintainer>
  <license>Apache License v2.0</license>
  <url type="website">opendr.eu</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <export>
  </export>
</package>
