<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>opendr_data_generation</name>
  <version>2.1.0</version>
  <description>OpenDR's ROS2 nodes for data generation package</description>
  <maintainer email="tefas@csd.auth.gr">tefas</maintainer>
  <license>Apache License v2.0</license>

  <depend>sensor_msgs</depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>opendr_bridge</exec_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
