<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>opendr_interfaces</name>
  <version>0.0.0</version>
 <description>OpenDR custom ROS2 interfaces</description>
  <maintainer email="tefas@csd.auth.gr">OpenDR Project Coordinator</maintainer>
  <license>Apache License v2.0</license>
  <depend>std_msgs</depend>
  <depend>shape_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>vision_msgs</depend>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

<build_depend>rosidl_default_generators</build_depend>

<exec_depend>rosidl_default_runtime</exec_depend>

<member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
