<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>opendr_perception</name>
  <version>2.1.0</version>
  <description>OpenDR ROS2 nodes for the perception package</description>
  <maintainer email="tefas@csd.auth.gr">OpenDR Project Coordinator</maintainer>
  <license>Apache License v2.0</license>

  <exec_depend>rclpy</exec_depend>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>vision_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <exec_depend>opendr_bridge</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
