<?xml version="1.0"?>
<package format="2">
  <name>eager_core</name>
  <version>0.0.0</version>
  <description>The eager_core package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="akeijzer@todo.todo">akeijzer</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>Apache2.0</license>


  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>gym-pip</exec_depend>
  <exec_depend>python3-future</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-tk</exec_depend>
  <exec_depend>python3-empy</exec_depend>
  <exec_depend>python3-defusedxml</exec_depend>
  <exec_depend>python3-future</exec_depend>
  <exec_depend>python3-netifaces</exec_depend>
  <exec_depend>python3-stable-baselines3-pip</exec_depend>
  <exec_depend>python3-pybullet-pip</exec_depend>


</package>
